src/objects/Test_Case__c.object
<CustomObject>
    <description>BME - A Test Case represents a repeatable business scenario which will allow application functionality to be tested. Test Cases are associated to Use Cases, as they should reflect a business scenario.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relevant_User_Profiles__c</fullName>
        <description>All relevant user profiles</description>
        <inlineHelpText>Select all Relevant User Profiles</inlineHelpText>
        <label>Relevant User Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>Authenticated Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BME Standard User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BME Super User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter External User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Free User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Moderator User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Manager Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Manager Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com - Free User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Partner User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Volume Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Partner User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Platform User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STADD_Test_Case_No__c</fullName>
        <inlineHelpText>Unique identifier from the test scripts</inlineHelpText>
        <label>STADD Test Case No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Ready to Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case_Name__c</fullName>
        <label>Test Case Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case_No__c</fullName>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Test Case No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Test_Case_Users__c</fullName>
        <description>Field used to denote all the users attributed to a particular Test Case</description>
        <inlineHelpText>Enter Test Case Users in this field</inlineHelpText>
        <label>Test Case Users</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Cycle__c</fullName>
        <description>Field to hold all active Test Cycles to denote which test Cycles are related to a particular Test Case</description>
        <inlineHelpText>Select all relevant Test Cycles related to this Test Case</inlineHelpText>
        <label>Test Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Test Cycle 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Cycle 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Cycle 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Cycle 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Cycle 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Cycle 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Cycle 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Related Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Test Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>